# Now-Playing-for-Slack-Webhook

./: Cargo.toml  README.md
src/: app.rs  debug.rs  fetch.rs  main.rs
src/fetch/: linux_fetch.rs  windows_fetch.rs
