[package]
name = "now_playing"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["all_loaders"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
pollster = "0.4.0"

[dependencies.windows]
version = "0.62.2"
features = ["Media_Control", "Foundation"]
